--- a/tmux.conf
+++ b/tmux.conf
@@ -78,9 +78,10 @@ set -g status-left-length 70
 set -g status-left " #h :: #(ip addr show wlp58s0 | awk '/inet /{print $2}' | awk -F/ '{print $1}' ) :: #S:#I:#P"
 
 set -g status-right-length 60
-set -g status-right "#(tmux-mem-cpu-load) "
+set -g status-right "#(tmux-mem-cpu-load) " # https://github.com/thewtex/tmux-mem-cpu-load
 
 set-option -g default-shell "/bin/zsh"
 set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 set-option -sg escape-time 10
+set -g mouse on
