--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g prefix C-a
 bind a send-prefix
 
 bind : command-prompt
+bind B break-pane
 
 set-window-option -g mode-keys vi
 bind C copy-mode
@@ -39,6 +40,8 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+bind Z resize-pane -Z
 
 bind z split-window -h -c '#{pane_current_path}'
 bind a split-window -v -c '#{pane_current_path}' 
